--- a/index.html
+++ b/index.html
@@ -1,38 +1,31 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Bootstrap demo</title>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    </head>
-        <body>
-            <h1>Hello, world!</h1>
-            <div class="container">
-            <div class="card text-center">
-                <img src="img/minecraft-steve-headshot.jpg" class="card-img-top img-thumbnail rounded mx-auto w-25 h-25 rounded-circle" alt="...">
-                <div class="card-body">
-                    <p class="fs-2">DYLAN WYRICK</p>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <div class="row w-25 h-25">
-                        <a href="https://github.com/DylanWDev" class="col-4"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 74.28 72.44"><defs><style>.cls-1{fill:#181616;fill-rule:evenodd;}</style></defs><g id="Layer_2" data-name="Layer 2"><g id="Objects"><path class="cls-1" d="M37.14,0A37.14,37.14,0,0,0,25.4,72.38c1.86.34,2.54-.8,2.54-1.79s0-3.22-.06-6.32c-10.33,2.25-12.51-5-12.51-5-1.68-4.29-4.12-5.44-4.12-5.44-3.37-2.3.26-2.25.26-2.25,3.72.26,5.68,3.82,5.68,3.82,3.32,5.68,8.7,4,10.81,3.09a8,8,0,0,1,2.36-5c-8.25-.93-16.92-4.12-16.92-18.35a14.35,14.35,0,0,1,3.83-10,13.31,13.31,0,0,1,.36-9.83s3.12-1,10.21,3.81a35.22,35.22,0,0,1,18.6,0c7.09-4.81,10.2-3.81,10.2-3.81A13.33,13.33,0,0,1,57,25.23a14.34,14.34,0,0,1,3.82,10c0,14.27-8.68,17.41-17,18.32,1.34,1.15,2.52,3.42,2.52,6.88,0,5,0,9,0,10.19,0,1,.67,2.15,2.55,1.79A37.15,37.15,0,0,0,37.14,0Z"/></g></g></svg></a>
-                        <a></a>
-                        <a></a>
-                    </div>
-                </div>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>filler_text</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="css/style.css" rel="stylesheet">
+    <style>
+        /* Custom CSS to center content vertically */
+        .vertical-center {
+            display: flex;
+            align-items: center;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <div class="row justify-content-start vertical-center" style="height: 100vh;">
+            <div id="about_text" class="text-left text-md-center">
+                <h1 id="intro">Hi, My <br>name is <span style="color: #2E5E4E; font-weight: bold;">Dylan</span> </h1>
+                <h5 id="about">I'm a <span style="font-weight: bold; color: #2E5E4E;">software developer</span> from Lexington, KY</h5>
             </div>
         </div>
+    </div>
 
-
-
-
-
-
-
-
-
-            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-            <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
-        </body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
+</body>
 </html>
