converted to react

--- a/index.html
+++ b/index.html
@@ -15,17 +15,13 @@
     </style>
 </head>
 <body>
-    <div class="container">
-        <div class="row justify-content-start vertical-center" style="height: 100vh;">
-            <div id="about_text" class="text-left text-md-center">
+    <div>
+        <div class="justify-content-start align-items-center" style="padding-top: 30vh; padding-left: 5%;">
+            <div id="about_text">
                 <h1 id="intro">Hi, My <br>name is <span style="color: #2E5E4E; font-weight: bold;">Dylan</span> </h1>
                 <h5 id="about">I'm a <span style="font-weight: bold; color: #2E5E4E;">software developer</span> from Lexington, KY</h5>
             </div>
         </div>
     </div>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
 </body>
 </html>
